# go-path-repro

./: .gitignore  BUILD.bazel  WORKSPACE
testing/: BUILD.bazel  dostuff.go  dostuff_test.go
